deploy/k8s/charts/enrolling.k8s/enrolling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enrolling
  labels:
    app: enrolling
    service: enrolling
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: enrolling
